  - Added new type Base64.
  - Added a new Base64 class that perform base 64 encoding and decoding.
  - Changed the level of all Logdoc messages in the 'service' group to DEBUG.
    Proper logging is the responsibility of the ServiceCaller subclass and
    corresponding classes.
  - Changed UnexpectedExceptionCallException constructor: The 'cause' argument
    is now mandatory.

* Generated CAPI classes:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.

* Generation of specification documentation:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1064487: The function name is not written in the examples.

* Generation of server-side Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Fixed bug #1063006: log.xml with alpha DTD fails if no server reachable.
  - The xins-client.jar file is now also included in the generated war file.

* Generation of types Java code:
  - Fixed bug #1061692: A NullPointerException was thrown when using
    Java 1.4.0 or Java 1.4.1.
  - Added new types float32 and float64.
  - Added new type base64.
  - If the type is not specified '_text' is used as default.

* Logdoc:
  - Added new types float32 and float64.

* Javadoc
  - Changed URL at the bottom of the pages to http://www.xins.org.

* Build and release process:
  - Adapted the release process to the new XINS version format.
  - Added netbeans-debug task.
  - Disabled optimization for javac.

* Libraries:
  - Updated Apache Jakarta Commons HttpClient from 2.0.1 to 2.0.2.

* Added support for the -version argument for the xins commands.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 RELEASE CANDIDATE 3:

* Generation of specification documentation:
  - Fixed bug #1064487: The function name is not written in the examples.
